--- a/public/index.html
+++ b/public/index.html
@@ -1,44 +1,181 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 <head>
-    <title>LIVE MONITORING</title>
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Панель мониторинга маяков</title>
+
     <style>
-        #map { height: 100vh; width: 100%; margin: 0; padding: 0; }
-        body { margin: 0; background: #000; }
+        html, body {
+            height: 100%;
+            margin: 0;
+            padding: 0;
+            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+        }
+
+        .container {
+            display: flex;
+            flex-direction: column;
+            height: 100vh;
+        }
+
+        .header {
+            background-color: #2c3e50;
+            color: white;
+            padding: 15px 20px;
+            text-align: center;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.2);
+            z-index: 1000;
+        }
+
+        .header h1 {
+            margin: 0;
+            font-size: 1.5em;
+        }
+
+        .status {
+            font-size: 0.9em;
+            color: #ecf0f1;
+            margin-top: 5px;
+        }
+
+        #map {
+            flex-grow: 1;
+            width: 100%;
+        }
+
+        .custom-beacon-icon {
+            background-color: #e74c3c;
+            border: 3px solid #c0392b;
+            border-radius: 50%;
+            width: 20px;
+            height: 20px;
+            box-shadow: 0 0 10px rgba(231, 76, 60, 0.7);
+            animation: pulse 2s infinite;
+        }
+
+        @keyframes pulse {
+            0% { box-shadow: 0 0 10px rgba(231, 76, 60, 0.7); }
+            50% { box-shadow: 0 0 20px rgba(231, 76, 60, 0.9); }
+            100% { box-shadow: 0 0 10px rgba(231, 76, 60, 0.7); }
+        }
     </style>
+
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+          integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
+          crossorigin=""/>
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+            integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
+            crossorigin=""></script>
+    <script src="/socket.io/socket.io.js"></script>
 </head>
 <body>
-    <div id="map"></div>
 
-    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
-    <script src="/socket.io/socket.io.js"></script>
+    <div class="container">
+        <div class="header">
+            <h1>🚨 Панель мониторинга маяков</h1>
+            <div class="status" id="connection-status">Подключение к серверу...</div>
+        </div>
+        <div id="map"></div>
+    </div>
+
     <script>
-        const map = L.map('map').setView([0, 0], 2); // Стартовый вид на весь мир
+        // --- ИНИЦИАЛИЗАЦИЯ КАРТЫ ---
+        const map = L.map('map').setView([55.7558, 37.6173], 10);
         L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-            attribution: 'Target Tracking System'
+            maxZoom: 19,
+            attribution: '© <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
         }).addTo(map);
 
-        const markers = {}; // Тут храним маркеры всех телефонов
+        // --- УПРАВЛЕНИЕ МАРКЕРАМИ МАЯКОВ ---
+        const beaconMarkers = {};
 
-        const socket = io();
+        function getBeaconIcon() {
+            return L.divIcon({
+                className: 'custom-beacon-icon',
+                iconSize: [20, 20],
+                iconAnchor: [10, 10]
+            });
+        }
 
-        socket.on('location_update', (data) => {
-            const { deviceId, lat, lng } = data;
+        /**
+         * Обновляет или плавно перемещает маркер маяка на карте.
+         * @param {object} beaconData - Данные маяка { deviceId, lat, lng, lastSeen }
+         */
+        function updateBeacon(beaconData) {
+            const { deviceId, lat, lng, lastSeen } = beaconData;
+            const newPosition = L.latLng(lat, lng);
 
-            if (markers[deviceId]) {
-                // Если телефон уже есть на карте — просто двигаем маркер
-                markers[deviceId].setLatLng([lat, lng]);
+            const popupContent = `
+                <b>Маяк ID:</b> <code>\${deviceId}</code><br>
+                <b>Широта:</b> \${lat.toFixed(5)}<br>
+                <b>Долгота:</b> \${lng.toFixed(5)}<br>
+                <b>Последний сигнал:</b> \${new Date(lastSeen).toLocaleString()}
+            `;
+
+            if (beaconMarkers[deviceId]) {
+                const marker = beaconMarkers[deviceId];
+
+                // --- НОВОЕ: Плавное перемещение маркера ---
+                // Используем встроенную функцию Leaflet для анимации
+                marker.animateTo(newPosition, {
+                    duration: 2000 // Длительность анимации в миллисекундах (2 секунды)
+                });
+
+                marker.setPopupContent(popupContent);
             } else {
-                // Если новый — создаем маркер
-                markers[deviceId] = L.marker([lat, lng]).addTo(map)
-                    .bindPopup(`ID: ${deviceId}`)
-                    .openPopup();
-                
-                // Центрируем карту на первом появившемся устройстве
-                map.setView([lat, lng], 15);
+                // Если маркера нет, создаем его в начальной точке
+                const newMarker = L.marker(newPosition, { icon: getBeaconIcon() })
+                    .addTo(map)
+                    .bindPopup(popupContent);
+
+                beaconMarkers[deviceId] = newMarker;
             }
+        }
+
+        // --- РАБОТА С СЕРВЕРОМ (SOCKET.IO) ---
+        const socket = io();
+        const statusElement = document.getElementById('connection-status');
+
+        socket.on('connect', () => {
+            console.log('✅ Успешно подключено к серверу.');
+            statusElement.textContent = 'Подключено. Ожидание сигналов маяков...';
+            statusElement.style.color = '#2ecc71';
         });
+
+        socket.on('disconnect', () => {
+            console.log('❌ Соединение с сервером разорвано.');
+            statusElement.textContent = 'Соединение потеряно. Пытаюсь переподключиться...';
+                        statusElement.style.color = '#e74c3c';
+        });
+
+        socket.on('beacon_update', (data) => {
+            console.log('📍 Получено обновление от маяка:', data.deviceId);
+            updateBeacon(data);
+        });
+
+        // --- ЗАГРУЗКА НАЧАЛЬНЫХ ДАННЫХ ---
+        async function loadInitialBeacons() {
+            try {
+                statusElement.textContent = 'Загрузка активных маяков...';
+                const response = await fetch('/api/beacons');
+                if (!response.ok) {
+                    throw new Error(`Ошибка HTTP: ${response.status}`);
+                }
+                const beacons = await response.json();
+                console.log(`🗺️ Загружено ${beacons.length} маяков с сервера.`);
+                beacons.forEach(beacon => updateBeacon(beacon));
+            } catch (error) {
+                console.error('Ошибка при загрузке начальных данных:', error);
+                statusElement.textContent = 'Не удалось загрузить маяки.';
+                statusElement.style.color = '#e67e22';
+            }
+        }
+
+        loadInitialBeacons();
     </script>
+
+    <!-- НОВОЕ: Подключаем плагин для плавного движения маркера -->
+    <script src="https://unpkg.com/leaflet.marker.slideto@0.2.0/Leaflet.Marker.SlideTo.js"></script>
 </body>
 </html>
